# tidal-websocket

./: Main.hs  README.md  start.sh  test.db  tidal-editor.cabal
Sound/Tidal/: Draw.hs  Hint.hs  Hint.hs~  JSON.hs  WebSocket.hs
data/: edit.html  edit.html.local  full.html  index.html  index.html.old
data/css/: spicule.css
data/old/: interp.hs  osc.html  receiver.hs  websocket.hs
