name:                tidal-editor
version:             0.9
synopsis:            Browser-based editor for the TidalCycles live coding environment
-- description:
homepage:            http://tidalcycles.org/
license:             GPL-3
license-file:        LICENSE
author:              Alex McLean
maintainer:          Alex McLean <alex@slab.org>, Mike Hodnick <mike.hodnick@gmail.com>
Stability:           Experimental
Copyright:           (c) Alex McLean and other contributors, 2016
category:            Sound
build-type:          Simple
cabal-version:       >=1.4
data-files:	     

Description: Tidal is a domain specific language for live coding pattern.

library
  Exposed-modules:     Sound.Tidal.WebSocket
                       Sound.Tidal.Hint

  Build-depends: base < 5, tidal==0.9, containers, hashable, colour, hosc > 0.13, text, mersenne-random-pure64, time, parsec, websockets > 0.8, mtl >= 2.1
